// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthTemplate organism matches snapshot (dark) 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 20,
      },
      {
        "backgroundColor": "#0B1220",
      },
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 16,
        "gap": 8,
        "padding": 20,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#F9FAFB",
            "fontSize": 24,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Login
    </Text>
    <View
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
    />
  </View>
</View>
`;

exports[`AuthTemplate organism matches snapshot (light) and renders title/children 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 20,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      {
        "borderRadius": 16,
        "gap": 8,
        "padding": 20,
        "width": "100%",
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#111827",
            "fontSize": 24,
            "fontWeight": "700",
          },
          undefined,
        ]
      }
    >
      Welcome
    </Text>
    <View
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
    />
  </View>
</View>
`;
